# photo-organizer

./: .gitignore  README.md  done.html  index.html  lint.sh  main.env  pyproject.toml
photo/: __main__.py
photo_organizer/: __main__.py  app.py  organizer.py  server.py
